<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catbot_background_verification"
    android:textAlignment="center"
    tools:context=".Users.Verification">

    <ImageView
        android:id="@+id/imageHero"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        android:transitionName="catbot_image_hero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/catbot_hero_5" />

    <TextView
        android:id="@+id/textNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa_bold"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/verificationNama"
        android:textAllCaps="true"
        android:textSize="48sp"
        android:transitionName="catbot_text_nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHero" />

    <TextView
        android:id="@+id/textDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/verificationDeskripsi"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:transitionName="catbot_text_deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNama" />

    <TextView
        android:id="@+id/textVerificationNomorHandphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comfortaa"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeskripsi" />

    <com.chaos.view.PinView
        android:id="@+id/pinViewKode"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:itemBackground="@color/white"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVerificationNomorHandphone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonVerifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:onClick="callVerifikasi"
        android:text="@string/buttonVerifikasi"
        app:backgroundTint="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinViewKode" />

</androidx.constraintlayout.widget.ConstraintLayout>