<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_200"
    tools:context=".Menu.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/catbot_background_home"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageHero"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_name"
                android:onClick="callProfile"
                android:transitionName="catbot_image_hero"
                app:srcCompat="@drawable/catbot_hero_1a" />

            <TextView
                android:id="@+id/textNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/imageHero"
                android:fontFamily="@font/lilita_one"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/homeTextName"
                android:textSize="24sp"
                android:transitionName="catbot_text_nama" />

            <TextView
                android:id="@+id/textDeskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textNama"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/imageHero"
                android:fontFamily="@font/comfortaa"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="4dp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/homeTextDeskripsi"
                android:transitionName="catbot_text_deskripsi"
                tools:targetApi="o" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCatbot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>